[FIX] Aligns the back refferal promo + link to the center on smaller devices.

--- a/5-objects/_objects.grid.scss
+++ b/5-objects/_objects.grid.scss
@@ -279,7 +279,7 @@ $block-mobile-margin-vertical:       $block-margin-vertical / 1.5;
     &.two-columns {
         .column {
             // 1st column
-            &:first-child {
+            &:first-child:not(:last-child) {
                 width: 100% * (1 - $two-col-layout-right-ratio );
                 flex: 1 1 auto;
             }
